# SimpleProfiler

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
src/: Timing.hpp
test/: timing.cpp
